# Emotional-RAG

./: ARCHITECTURE.md  EMOTIONAL_RAG_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  test_system.py
app/: character.py  config.py  conversation_state.py  emotion_detector.py  llm.py  main.py  memory.py  retriever.py
data/: conversation_state.json  memory.json
data/embeddings/: chroma.sqlite3
